# gcp-mcp

./: .gitignore  README.md  app.py  logging_config.py  main.py  pyproject.toml
gcp/: utils.py
gcp/compute/: firewalls.py  instances.py
gcp/iam/: policy.py
gcp/storage/: buckets.py
tests/: test_buckets.py  test_instances.py  test_policy.py
