[project]
name = "gcp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "fastmcp>=2.13.0.2",
    "google-cloud-compute>=1.40.0",
    "starlette>=0.37.0",
    "structlog>=25.5.0",
    "google-cloud-storage>=3.6.0",
]
